# python-audio-separator

./: .gitignore  Dockerfile.cloudrun  Dockerfile.cpu  Dockerfile.cuda11  Dockerfile.cuda12  Dockerfile.gpu  Dockerfile.rocm  Dockerfile.runpod  Dockerfile.runpod-cuda11  Dockerfile.runpod-cuda12  LICENSE  Pipfile  README.md  TODO.md  audio_separator_Colab_work.ipynb  cloudbuild.yaml  debug_minimal.py  debug_results.txt  debug_rocm_issues.py  environment.yaml  environment.yml  gradio_demo.py  pyproject.toml  pytest.ini  requirements-gpu.txt  separate.py  setup.py
.claude/plans/: gha-gpu-runner.plan.md
.cursor/rules/: specify-rules.mdc
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: BUG_REPORT.yml  FEATURE_REQUEST.yml
.github/workflows/: ci.yaml  code_formatter.yml  deploy-to-cloudrun.yml  github-sponsors.yml  publish-to-conda.yml  publish-to-docker.yml  publish-to-pypi.yml  publish.yml  run-integration-tests.yaml  run-tests.yaml  run-unit-tests.yaml
.github/workflows-out/: publish-to-docker.yml.outb
.opencode/.beacon/: hnsw.entries.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
audio_separator/: __init__.py  audio_separator.py  ensemble_presets.json  model-data.json  models-scores.json  models.json  separator.py
audio_separator/remote/: README.md  __init__.py  api_client.py  cli.py  deploy_cloudrun.py  deploy_modal.py  job_store.py  output_store.py
audio_separator/separator/: audio_chunking.py  common_separator.py  ensembler.py  separator.py  spec_utils.py  stft.py
audio_separator/separator/architectures/: __init__.py  demucs_separator.py  mdx_separator.py  mdxc_separator.py  roformer_separator.py  vr_separator.py
audio_separator/separator/roformer/: README.md  __init__.py  bs_roformer_config.py  bs_roformer_validator.py  configuration_normalizer.py  fallback_loader.py  mel_band_roformer_config.py  mel_band_roformer_validator.py  model_configuration.py  model_loading_result.py  parameter_validation_error.py  parameter_validator.py  roformer_loader.py
audio_separator/separator/uvr_lib_v5/: attend.py  bs_roformer.py  mel_band_roformer.py  playsound.py  spec_utils.py  stft.py  tfc_tdf_v3.py  utils.py
audio_separator/utils/: app.py  cli.py  pyrb.py  separate.py  spec_utils.py
conda/: build_env.yaml  conda_build_config.yaml  meta.yaml
docs/: BIT_DEPTH_IMPLEMENTATION_SUMMARY.md  BIT_DEPTH_PRESERVATION.md  CI-GPU-RUNNERS.md  deton24-audio-separation-info-2026-03-15.md  deton24-model-mapping-and-ensemble-guide.md
docs/archive/: 2026-03-22-modal-to-gcp-migration-plan.md
scripts/: download_preset_models.py  separate.py
specs/: 001-update-roformer-implementation.md
specs/001-update-roformer-implementation/: data-model.md  plan.md  post-implementation-issues.md  quickstart.md  research.md  tasks.md
specs/001-update-roformer-implementation/contracts/: fallback_loader_interface.py  parameter_validator_interface.py  roformer_loader_interface.py
specs/main/: plan.md
tests/: README.md  TODO.txt  manual_test_bit_depth.py  reproduce_ensemble_bug.py  test_cli.py  utils.py  utils_audio_verification.py  validate_bit_depth.py
tests/contract/: test_fallback_loader_interface.py  test_parameter_validator_interface.py  test_roformer_loader_interface.py
tests/inputs/: clocks_piano.flac  levee_drums.flac  mardy20s.flac  mardy20s_(Instrumental)_mel_band_roformer_karaoke_aufr33_viperx_sdr_10.flac  mardy20s_(Vocals)_mel_band_roformer_karaoke_aufr33_viperx_sdr_10.flac  only_time_reverb.flac  sing_sing_sing_brass.flac  under_pressure_harmonies.flac
tests/inputs/reference/: ref_clocks_piano_bass_htdemucs_ft.flac  ref_clocks_piano_drums_htdemucs_ft.flac  ref_clocks_piano_instrumental.flac  ref_clocks_piano_instrumental_karaoke.flac  ref_clocks_piano_other_htdemucs_ft.flac  ref_clocks_piano_vocals.flac  ref_clocks_piano_vocals_htdemucs_ft.flac  ref_clocks_piano_vocals_karaoke.flac  ref_levee_drums_bass_htdemucs_ft.flac  ref_levee_drums_crash_drumsep.flac  ref_levee_drums_drums_htdemucs_ft.flac  ref_levee_drums_hh_drumsep.flac  ref_levee_drums_instrumental.flac  ref_levee_drums_instrumental_karaoke.flac  ref_levee_drums_instrumental_preset_vocal_balanced.flac  ref_levee_drums_kick_drumsep.flac  (+26 more)
tests/integration/: README.md  generate_multi_stem_references.py  generate_reference_images.py  generate_reference_images_24bit.py  generate_reference_images_ensemble.py  requirements.txt  test_24bit_preservation.py  test_bit_depth_e2e.py  test_bit_depth_preservation.py  test_cli_integration.py  test_ensemble_integration.py  test_ensemble_meaningful.py  test_multi_stem_verification.py  test_remote_api_integration.py  test_roformer_audio_quality.py  test_roformer_backward_compatibility.py  test_roformer_config_validation.py  test_roformer_e2e.py  test_roformer_fallback_mechanism.py  test_roformer_model_switching.py  test_roformer_new_parameters.py  test_separator_output_integration.py
tests/model-metrics/: test-all-models.py
tests/regression/: test_all_models_stem_verification.py  test_roformer_size_mismatch.py
tests/remote/: README.md
tests/unit/: test_audio_chunking.py  test_bit_depth_detection.py  test_bit_depth_writing.py  test_cli.py  test_configuration_normalizer.py  test_deploy_cloudrun_async.py  test_ensemble_presets.py  test_ensembler.py  test_fallback_loader.py  test_gpu_runtime_setup.py  test_job_store.py  test_mdxc_roformer_chunking.py  test_model_configuration.py  test_output_store.py  test_parameter_validator.py  test_remote_api_client.py  test_remote_cli.py  test_separator_chunking.py  test_separator_detection.py  test_spec_utils.py  test_stem_naming.py  test_stft.py
tools/: calculate-model-hashes.py  sync-to-github.py
utils/: spec_utils.py
(+25 files in other folders)
