[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "audio-separator"
version = "0.10.4"
description = "Easy to use vocal separation on CLI or as a python package, using the amazing MDX-Net models from UVR trained by @Anjok07"
authors = ["Andrew Beveridge <andrew@beveridge.uk>"]
license = "MIT"
readme = "README.md"
packages = [{include = "audio_separator"}]
homepage = "https://github.com/karaokenerds/python-audio-separator"
repository = "https://github.com/karaokenerds/python-audio-separator"
documentation = "https://github.com/karaokenerds/python-audio-separator/blob/main/README.md"
keywords = ["audio", "sound", "karaoke"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Mixers",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]
python = ">=3.9"
requests = ">=2"
numpy = ">=1.23"
librosa = ">=0.9"
six = ">=1.16"
torch = ">=2"
pydub = ">=0.25"
onnx = ">=1.14"
onnxruntime = { version = ">=1.15", optional = true }
onnxruntime-gpu = { version = ">=1.15", optional = true }
onnxruntime-silicon = { version = ">=1.15", optional = true }

[tool.poetry.extras]
cpu = ["onnxruntime"]
gpu = ["onnxruntime-gpu"]
silicon = ["onnxruntime-silicon"]

[tool.poetry.scripts]
audio-separator = 'audio_separator.utils.cli:main'

[tool.poetry.group.dev.dependencies]
black = ">=23"

[tool.black]
line-length = 140
