[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "audio-separator"
version = "0.16.5"
description = "Easy to use audio stem separation, using various models from UVR trained primarily by @Anjok07"
authors = ["Andrew Beveridge <andrew@beveridge.uk>"]
license = "MIT"
readme = "README.md"
packages = [{include = "audio_separator"}]
homepage = "https://github.com/karaokenerds/python-audio-separator"
repository = "https://github.com/karaokenerds/python-audio-separator"
documentation = "https://github.com/karaokenerds/python-audio-separator/blob/main/README.md"
keywords = ["audio", "sound", "karaoke"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Mixers",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]
python = ">=3.9"
requests = ">=2"
numpy = ">=1.23"
librosa = ">=0.10"
samplerate = "0.1.0"
six = ">=1.16"
torch = "*"
tqdm = "*"
pydub = ">=0.25"
onnx = ">=1.14"
onnx2torch = ">=1.5"
onnxruntime = { version = ">=1.17", optional = true }
onnxruntime-gpu = { version = ">=1.17", optional = true }
julius = ">=0.2"
diffq = ">=0.2"
einops = ">=0.7"
pyyaml = "*"
ml_collections = "*"
resampy = ">=0.4"

[tool.poetry.extras]
cpu = ["onnxruntime"]
gpu = ["onnxruntime-gpu"]

[tool.poetry.scripts]
audio-separator = 'audio_separator.utils.cli:main'

[tool.poetry.group.dev.dependencies]
black = ">=23"
pytest = "*"
pytest-cov = "^4.1.0"

[tool.black]
line-length = 140
